resume draft and tic tac toe changes

--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -1,28 +1,19 @@
 <html>
   <head>
     <title>Tic Tac Toe</title>
-    <style>
-     .one {
-       display: block;
-        }
 
-     .two {
-        display: block;
-        }
-    </style>
   </head>
 
   <body>
-    <div class="one">0</div>
-    <div class="one">X</div>
-    <div class="one">0</div>
-    <div class="two">X</div>
-    <div class="two">0</div>
-    <div class="two">X</div>
-    <div class="three">0</div>
-    <div class="three">X</div>
-    <div class="three">0</div>
+
+<div>
+  0 X 0 <div>
+    0 X 0<div>
+      X 0 X
+    </div>
   </div>
+</div>
+
   </body>
 
 </html>
